<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorTiga"
    tools:context="com.istandev.pelatihanandroid2.MyProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/background2">
        <ImageView
            android:id="@+id/photo_profil"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="20dp" />
        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="20dp"
            android:shrinkColumns="2"
            android:stretchColumns="0">
            <TableRow
                android:layout_margin="5dp">
                <TextView
                    android:text="Nama"/>
                <TextView
                    android:text=" : "/>
                <TextView
                    android:text="@string/nama"/>
            </TableRow>
            <TableRow
                android:layout_margin="5dp">
                <TextView
                    android:text="Alamat"/>
                <TextView
                    android:text=" : "/>
                <TextView
                    android:text="@string/alamat"/>
            </TableRow>
            <TableRow
                android:layout_margin="5dp">
                <TextView
                    android:text="Telp."/>
                <TextView
                    android:text=" : "/>
                <TextView
                    android:gravity="left"
                    android:text="@string/telp"/>
            </TableRow>
            <TableRow
                android:layout_margin="5dp">
                <TextView
                    android:text="Email"/>
                <TextView
                    android:text=" : "/>
                <TextView
                    android:gravity="left"
                    android:text="@string/email"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Deskripsi singkat :"
            android:textStyle="bold|italic"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_singkat"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Pengalaman kerja :"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pengalaman_kerja"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Motto hidup :"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motto_hidup"/>
    </LinearLayout>

</LinearLayout>
